some pug changes

--- a/views/_footer.pug
+++ b/views/_footer.pug
@@ -1,6 +1,6 @@
 footer.footer
     .footer__logo
-        img(src='/imagens/servicos/Cliline_high_R.JPG' alt='Cliline Logo')
+        img(src='/imagens/lalitaa/lalitaa_logo_black.png' alt='Lalitaa Logo') 
     ul.footer__nav
         li: a(href='#') Sobre nós
         li: a(href='#') Download Apps
