--- a/views/_header.pug
+++ b/views/_header.pug
@@ -2,12 +2,12 @@ header.header
     nav.nav.nav-tours
         a.nav__el(href='/') Todos Serviços
         .header__logo
-            img(src='/img/favicon.jpeg' alt='Logo')
+            img(src='/imagens/lalitaa/lalitaa.png' alt='Logo')
     nav.nav.nav__user
         if usuario
             a.nav__el.nav__el--logout Sair
             a.nav__el(href='me')
-                img.nav__user-img(src=`/imagens/usuarios/${usuario.fotografia}` alt=`${usuario.nome}`)
+                img.nav__user-img(src=`/imagens/dev/usuarios/${usuario.fotografia}` alt=`${usuario.nome}`)
                 span= usuario.nome.split(' ')[0]
         else
             a.nav__el(href='/login') Login
