--- a/views/_mixins.pug
+++ b/views/_mixins.pug
@@ -1,7 +1,7 @@
 mixin overviewBox(label, text, icon)
     .overview-box__detail
         svg.overview-box__icon
-            use(xlink:href=`/img/icons.svg#icon-${icon}`)
+            use(xlink:href=`/imagens/dev/svgicons/icons.svg#icon-${icon}`)
         span.overview-box__label= label
         span.overview-box__text= text
 mixin moderadoresBox(fotografia, role, nome)
@@ -26,5 +26,5 @@ mixin navItem(link,text,icon,active)
     li(class=`${active ? 'side-nav--active':''}`)
         a(href=`${link}`)
             svg
-                use(xlink:href=`img/icons.svg#icon-${icon}`)
+                use(xlink:href=`/imagens/dev/svgicons/icons.svg#icon-${icon}`)
             | #{text}
