--- a/public/sass/_layout.scss
+++ b/public/sass/_layout.scss
@@ -27,6 +27,28 @@
    }
 }
 
+.produto__container {
+   background-color: var(--color-main-back);
+   display: grid;
+
+   grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
+   grid-template-columns:
+      [sidebar-start] 2rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(
+         8,
+         [col-start] minmax(min-content, 14rem) [col-end]
+      )
+      [center-end] minmax(22rem, 1fr) [full-end];
+
+   @media only screen and (max-width: $bp-seven) {
+      grid-template-columns:
+         [sidebar-start] 2rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(
+            8,
+            [col-start] minmax(min-content, 14rem) [col-end]
+         )
+         [center-end] minmax(11rem, 1fr) [full-end];
+   }
+}
+
 .content {
    display: flex;
    flex-direction: column;
