--- a/public/sass/parts/_stores.scss
+++ b/public/sass/parts/_stores.scss
@@ -30,6 +30,15 @@
       z-index: 1;
    }
 
+   &__img--min {
+      border-top: 2px solid $color-primary-strong;
+      width: 20rem;
+
+      @media only screen and (max-width: $bp-seven) {
+         width: 9rem;
+      }
+   }
+
    &__like {
       grid-row: 1 / 2;
       grid-column: 2 / 3;
@@ -60,6 +69,24 @@
       font-weight: 400;
       box-shadow: $shadow-2;
       //transform: translateY(50%);
+
+      &--min {
+         width: 100%;
+         z-index: 3;
+         padding: 1.25rem;
+
+         font-family: $font-lato;
+         font-size: 1.6rem;
+         text-align: center;
+         background-color: $color-primary-strong;
+         color: $color-white;
+         font-weight: 400;
+         //transform: translateY(50%);
+
+         @media only screen and (max-width: $bp-seven) {
+            display: none;
+         }
+      }
    }
 
    &__like,
