--- a/public/sass/_layout.scss
+++ b/public/sass/_layout.scss
@@ -49,6 +49,57 @@
    }
 }
 
+.main {
+   background-color: $color-main-back;
+   padding: 8rem 6rem;
+
+   position: relative;
+}
+
+.form {
+   display: flex;
+   flex-direction: column;
+   justify-content: space-between;
+   width: 100%;
+
+   .form__input {
+      color: $grey-color-dark;
+      display: block;
+      font-family: inherit;
+      font-size: 1.5rem;
+      font-weight: bold;
+      padding: 1.25rem 1.75rem;
+      border: none;
+      width: 100%;
+      background-color: #e4e3e3;
+      -webkit-transition: all 0.3s;
+      transition: all 0.3s;
+      -webkit-box-sizing: border-box;
+      box-sizing: border-box;
+      /* Pseudo element (a visible thing that isn't really in the DOM).
+          Also needs -ms- */
+   }
+   .form__input:focus {
+      outline: none;
+      border-bottom: 3px solid #55c57a;
+   }
+   .form__input:focus:invalid {
+      border-bottom: 3px solid #ff3e30;
+   }
+
+   .form__group:not(:last-child) {
+      margin-bottom: 2.5rem;
+   }
+
+   .form__label {
+      color: $color-primary-strong;
+      display: block;
+      font-size: 1.6rem;
+      font-weight: 700;
+      margin-bottom: 0.75rem;
+   }
+}
+
 .content {
    display: flex;
    flex-direction: column;
