--- a/public/sass/parts/_sidenav.scss
+++ b/public/sass/parts/_sidenav.scss
@@ -2,6 +2,7 @@
    z-index: 10;
    background-color: var(--color-primary-white);
    margin-top: 7rem;
+   //margin-right: 0.3rem;
 
    flex: 0 0 15%;
 
@@ -22,6 +23,7 @@
    margin-top: 3.5rem;
    display: flex;
    flex-direction: column;
+   text-transform: uppercase;
 
    @media only screen and (max-width: $bp-seven) {
       span {
@@ -68,7 +70,6 @@
    &__link:visited {
       color: var(--color-primary-strong);
       text-decoration: none;
-      text-transform: uppercase;
       display: block;
       padding: 1.5rem 3rem;
 
@@ -82,6 +83,65 @@
       height: 2.5rem;
       margin-right: 1rem;
       fill: currentColor;
+   }
+
+   &__store__img {
+      background-color: var(--color-primary-strong);
+      display: grid;
+
+      grid-template-columns: repeat(2, 1fr);
+      grid-row-gap: 1rem;
+      box-shadow: $shadow-2;
+
+      border-top: 2px solid $color-primary-strong;
+      width: 20rem;
+
+      @media only screen and (max-width: $bp-seven) {
+         width: 9rem;
+      }
+   }
+
+   &__chatbtn {
+      width: 20rem;
+
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+
+      background-color: $color-primary-white;
+      color: $color-primary-strong;
+      border: none;
+      border-radius: o;
+      font-family: inherit;
+      font-size: 1.5rem;
+      text-transform: uppercase;
+      padding: 1.8rem 3rem;
+      cursor: pointer;
+      outline: none;
+      transition: all 0.3s;
+      box-shadow: $shadow-2;
+
+      svg {
+         height: 2rem;
+         width: 2rem;
+         margin-right: 1rem;
+      }
+
+      &:hover {
+         background-color: $color-primary-light;
+      }
+
+      &:active {
+         background-color: $color-primary-dark;
+      }
+
+      @media only screen and (max-width: $bp-seven) {
+         span {
+            display: none;
+         }
+         padding-right: 2rem;
+         width: 9rem;
+      }
    }
 
    &__callbtn {
