--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -8,3 +8,9 @@
 @import 'parts/gallery';
 @import 'parts/footer';
 @import 'parts/login';
+
+@import 'parts/userDashboard';
+
+@import 'parts/storeOwnerDashboard';
+@import 'parts/storeOwnerNewstore';
+@import 'parts/storeOwnerNewproduct';
