--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -26,6 +26,12 @@ grey 2: #989c94
   --color-primary-strong: #9e747e;
   --color-primary-strong-2: #8b676f;
   --color-login: #ff91a3;
+  --color-gold: rgb(255, 215, 0);
+  --color-gold-light: rgb(255, 230, 89);
+  --color-gold-strong: rgb(192, 163, 0);
+  --color-blue: rgb(0, 191, 255);
+  --color-blue-light: rgb(102, 217, 255);
+  --color-blue-strong: rgb(8, 149, 196);
   --color-white: rgb(255, 255, 255);
   --color-white-grey: rgb(236, 236, 236);
   --color-black: rgb(0, 0, 0);
@@ -81,6 +87,46 @@ body {
     .produto__container {
       grid-template-columns: [sidebar-start] 2rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(11rem, 1fr) [full-end]; } }
 
+.userDashboard__container {
+  background-color: var(--color-main-back);
+  display: grid;
+  height: 100vh;
+  grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
+  grid-template-columns: [sidebar-start] 2rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(22rem, 1fr) [full-end]; }
+  @media only screen and (max-width: 43.75rem) {
+    .userDashboard__container {
+      grid-template-columns: [sidebar-start] 2rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(11rem, 1fr) [full-end]; } }
+
+.storeOwnerDashboard__container {
+  background-color: var(--color-main-back);
+  display: grid;
+  height: 100vh;
+  grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
+  grid-template-columns: [sidebar-start] 2rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(22rem, 1fr) [full-end]; }
+  @media only screen and (max-width: 43.75rem) {
+    .storeOwnerDashboard__container {
+      grid-template-columns: [sidebar-start] 2rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(11rem, 1fr) [full-end]; } }
+
+.newStoreDashboard__container {
+  background-color: var(--color-main-back);
+  display: grid;
+  height: 100vh;
+  grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
+  grid-template-columns: [sidebar-start] 2rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(22rem, 1fr) [full-end]; }
+  @media only screen and (max-width: 43.75rem) {
+    .newStoreDashboard__container {
+      grid-template-columns: [sidebar-start] 2rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(11rem, 1fr) [full-end]; } }
+
+.produtoDashboard__container {
+  background-color: var(--color-main-back);
+  display: grid;
+  height: 100vh;
+  grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
+  grid-template-columns: [sidebar-start] 2rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(22rem, 1fr) [full-end]; }
+  @media only screen and (max-width: 43.75rem) {
+    .produtoDashboard__container {
+      grid-template-columns: [sidebar-start] 2rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(11rem, 1fr) [full-end]; } }
+
 .main {
   background-color: #8d8f8d;
   padding: 8rem 6rem;
@@ -112,8 +158,6 @@ body {
     border-bottom: 3px solid #55c57a; }
   .form .form__input:focus:invalid {
     border-bottom: 3px solid #ff3e30; }
-  .form .form__group:not(:last-child) {
-    margin-bottom: 2.5rem; }
   .form .form__label {
     color: #9e747e;
     display: block;
@@ -130,7 +174,6 @@ body {
   background-color: white;
   color: #9e747e;
   border: none;
-  border-radius: o;
   font-family: inherit;
   font-size: 1.5rem;
   text-transform: uppercase;
@@ -360,6 +403,98 @@ body {
     @media only screen and (max-width: 43.75rem) {
       .side-nav__store__img {
         width: 9rem; } }
+  .side-nav__compras {
+    width: 20rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background-color: gold;
+    color: #9e747e;
+    border: none;
+    font-family: inherit;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    padding: 1.8rem 3rem;
+    cursor: pointer;
+    outline: none;
+    transition: all 0.3s;
+    box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.103); }
+    .side-nav__compras svg {
+      height: 2rem;
+      width: 2rem;
+      margin-right: 1rem; }
+    .side-nav__compras:hover {
+      background-color: #ffe659; }
+    .side-nav__compras:active {
+      background-color: #c0a300; }
+    @media only screen and (max-width: 43.75rem) {
+      .side-nav__compras {
+        padding-right: 2rem;
+        width: 9rem; }
+        .side-nav__compras span {
+          display: none; } }
+  .side-nav__lojas {
+    width: 20rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    text-decoration: none;
+    background-color: deepskyblue;
+    color: white;
+    border: none;
+    font-family: inherit;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    padding: 1.8rem 3rem;
+    cursor: pointer;
+    outline: none;
+    transition: all 0.3s;
+    box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.103); }
+    .side-nav__lojas svg {
+      height: 2rem;
+      width: 2rem;
+      margin-right: 1rem; }
+    .side-nav__lojas:hover {
+      background-color: #66d9ff; }
+    .side-nav__lojas:active {
+      background-color: #0895c4; }
+    @media only screen and (max-width: 43.75rem) {
+      .side-nav__lojas {
+        padding-right: 2rem;
+        width: 9rem; }
+        .side-nav__lojas span {
+          display: none; } }
+  .side-nav__criarLoja {
+    width: 20rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    text-decoration: none;
+    background-color: #51cc51;
+    color: white;
+    border: none;
+    font-family: inherit;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    padding: 1.8rem 3rem;
+    cursor: pointer;
+    outline: none;
+    transition: all 0.3s;
+    box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.103); }
+    .side-nav__criarLoja svg {
+      height: 2rem;
+      width: 2rem;
+      margin-right: 1rem; }
+    .side-nav__criarLoja:hover {
+      background-color: #67e267; }
+    .side-nav__criarLoja:active {
+      background-color: #0a8d0a; }
+    @media only screen and (max-width: 43.75rem) {
+      .side-nav__criarLoja {
+        padding-right: 2rem;
+        width: 9rem; }
+        .side-nav__criarLoja span {
+          display: none; } }
   .side-nav__chatbtn {
     width: 20rem;
     display: flex;
@@ -368,7 +503,6 @@ body {
     background-color: #fcf0f2;
     color: #9e747e;
     border: none;
-    border-radius: o;
     font-family: inherit;
     font-size: 1.5rem;
     text-transform: uppercase;
@@ -666,8 +800,430 @@ body {
   background-color: var(--color-primary-strong);
   color: var(--color-white);
   justify-items: end;
-  box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.103); }
+  box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.103);
+  border-radius: 2px; }
   .login__btn:hover {
     background-color: #d6a5ae; }
   .login__btn:active {
     background-color: #9e747e; }
+
+.userDashboard {
+  grid-column: sidebar-end/center-end;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-gap: 7rem;
+  background-color: var(--color-main-back);
+  padding-top: 10rem;
+  color: var(--color-white); }
+
+.userDashboard__item {
+  background-color: var(--color-white);
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-row-gap: 1rem;
+  align-items: center;
+  justify-items: center;
+  box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.103);
+  border-radius: 2px;
+  width: 30rem;
+  height: 45rem;
+  /*
+     &__btn--2 {
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        grid-column: 1 / 2;
+        background-color: $color-green;
+        color: $color-white;
+        //grid-gap: 0.2rem;
+        svg {
+           fill: $color-white;
+           height: 2rem;
+           width: 2rem;
+           margin-right: 1rem;
+        }
+  
+        &:hover {
+           background-color: $color-green-light;
+        }
+        &:active {
+           background-color: $color-green-dark;
+        }
+     }*/ }
+
+.form {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-row-gap: 1rem;
+  align-items: center;
+  justify-items: center; }
+  .form__userimg {
+    width: 50%;
+    grid-row: 1 / 2;
+    grid-column: 1 / -1;
+    z-index: 1;
+    border-radius: 2px;
+    box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.103); }
+  .form .form__upload {
+    width: 2rem;
+    height: 2rem;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1; }
+  .form .form__upload + label {
+    padding: 1rem 3.2rem;
+    font-size: 1.7rem;
+    text-transform: uppercase;
+    background-color: var(--color-primary-strong);
+    color: var(--color-white);
+    justify-items: end;
+    box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.103);
+    border-radius: 2px; }
+    .form .form__upload + label:hover {
+      background-color: #d6a5ae; }
+    .form .form__upload + label:active {
+      background-color: #9e747e; }
+  .form .form__update {
+    background-color: var(--color-primary-strong);
+    color: var(--color-white);
+    justify-items: end;
+    box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.103);
+    border-radius: 2px; }
+    .form .form__update:hover {
+      background-color: #d6a5ae; }
+    .form .form__update:active {
+      background-color: #9e747e; }
+  .form__nome {
+    color: black;
+    font-size: 2rem; }
+  .form__btn {
+    grid-column: 1 / -1;
+    grid-gap: 0.7rem;
+    background-color: #9e747e;
+    color: white; }
+    .form__btn svg {
+      fill: #9e747e;
+      height: 2rem;
+      width: 2rem;
+      margin-right: 1rem; }
+    .form__btn:hover {
+      background-color: #c6cac2; }
+    .form__btn:active {
+      background-color: #818380; }
+
+.storeOwnerDashboard {
+  grid-column: sidebar-end/center-end;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-gap: 7rem;
+  background-color: var(--color-main-back);
+  padding-top: 10rem;
+  color: var(--color-white); }
+
+.storeOwnerDashboard__item {
+  background-color: var(--color-white);
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-row-gap: 1rem;
+  align-items: center;
+  justify-items: center;
+  box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.103);
+  border-radius: 2px;
+  width: 30rem;
+  height: 45rem;
+  /*
+      &__btn--2 {
+         display: flex;
+         align-items: center;
+         justify-content: space-evenly;
+         grid-column: 1 / 2;
+         background-color: $color-green;
+         color: $color-white;
+         //grid-gap: 0.2rem;
+         svg {
+            fill: $color-white;
+            height: 2rem;
+            width: 2rem;
+            margin-right: 1rem;
+         }
+   
+         &:hover {
+            background-color: $color-green-light;
+         }
+         &:active {
+            background-color: $color-green-dark;
+         }
+      }*/ }
+
+.form {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-row-gap: 1rem;
+  align-items: center;
+  justify-items: center; }
+  .form__storeOwnerimg {
+    width: 50%;
+    grid-row: 1 / 2;
+    grid-column: 1 / -1;
+    z-index: 1;
+    border-radius: 2px;
+    box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.103); }
+  .form .form__upload {
+    width: 2rem;
+    height: 2rem;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1; }
+  .form .form__upload + label {
+    padding: 1rem 3.2rem;
+    font-size: 1.7rem;
+    text-transform: uppercase;
+    background-color: var(--color-primary-strong);
+    color: var(--color-white);
+    justify-items: end;
+    box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.103);
+    border-radius: 2px; }
+    .form .form__upload + label:hover {
+      background-color: #d6a5ae; }
+    .form .form__upload + label:active {
+      background-color: #9e747e; }
+  .form .form__update {
+    background-color: var(--color-primary-strong);
+    color: var(--color-white);
+    justify-items: end;
+    box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.103);
+    border-radius: 2px; }
+    .form .form__update:hover {
+      background-color: #d6a5ae; }
+    .form .form__update:active {
+      background-color: #9e747e; }
+  .form__nome {
+    color: black;
+    font-size: 2rem; }
+  .form__btn {
+    grid-column: 1 / -1;
+    grid-gap: 0.7rem;
+    background-color: #9e747e;
+    color: white; }
+    .form__btn svg {
+      fill: #9e747e;
+      height: 2rem;
+      width: 2rem;
+      margin-right: 1rem; }
+    .form__btn:hover {
+      background-color: #c6cac2; }
+    .form__btn:active {
+      background-color: #818380; }
+
+.newStoreDashboard {
+  grid-column: sidebar-end/center-end;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-gap: 7rem;
+  background-color: var(--color-main-back);
+  padding-top: 10rem;
+  color: var(--color-white); }
+
+.newStoreDashboard__item {
+  background-color: var(--color-white);
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-row-gap: 1rem;
+  align-items: center;
+  justify-items: center;
+  box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.103);
+  border-radius: 2px;
+  width: 30rem;
+  height: 45rem;
+  /*
+      &__btn--2 {
+         display: flex;
+         align-items: center;
+         justify-content: space-evenly;
+         grid-column: 1 / 2;
+         background-color: $color-green;
+         color: $color-white;
+         //grid-gap: 0.2rem;
+         svg {
+            fill: $color-white;
+            height: 2rem;
+            width: 2rem;
+            margin-right: 1rem;
+         }
+   
+         &:hover {
+            background-color: $color-green-light;
+         }
+         &:active {
+            background-color: $color-green-dark;
+         }
+      }*/ }
+
+.form {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-row-gap: 1rem;
+  align-items: center;
+  justify-items: center; }
+  .form__userimg {
+    width: 50%;
+    grid-row: 1 / 2;
+    grid-column: 1 / -1;
+    z-index: 1;
+    border-radius: 2px;
+    box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.103); }
+  .form .form__upload {
+    width: 2rem;
+    height: 2rem;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1; }
+  .form .form__upload + label {
+    padding: 1rem 3.2rem;
+    font-size: 1.7rem;
+    text-transform: uppercase;
+    background-color: var(--color-primary-strong);
+    color: var(--color-white);
+    justify-items: end;
+    box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.103);
+    border-radius: 2px; }
+    .form .form__upload + label:hover {
+      background-color: #d6a5ae; }
+    .form .form__upload + label:active {
+      background-color: #9e747e; }
+  .form .form__update {
+    background-color: var(--color-primary-strong);
+    color: var(--color-white);
+    justify-items: end;
+    box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.103);
+    border-radius: 2px; }
+    .form .form__update:hover {
+      background-color: #d6a5ae; }
+    .form .form__update:active {
+      background-color: #9e747e; }
+  .form__nome {
+    color: black;
+    font-size: 2rem; }
+  .form__btn {
+    grid-column: 1 / -1;
+    grid-gap: 0.7rem;
+    background-color: #9e747e;
+    color: white; }
+    .form__btn svg {
+      fill: #9e747e;
+      height: 2rem;
+      width: 2rem;
+      margin-right: 1rem; }
+    .form__btn:hover {
+      background-color: #c6cac2; }
+    .form__btn:active {
+      background-color: #818380; }
+
+.produtoDashboard {
+  grid-column: sidebar-end/center-end;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  grid-gap: 7rem;
+  background-color: var(--color-main-back);
+  padding-top: 10rem;
+  color: var(--color-white); }
+
+.produtoDashboard__item {
+  background-color: var(--color-white);
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-row-gap: 1rem;
+  align-items: center;
+  justify-items: center;
+  box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.103);
+  border-radius: 2px;
+  width: 100%;
+  height: 100%;
+  padding: 1rem;
+  /*
+      &__btn--2 {
+         display: flex;
+         align-items: center;
+         justify-content: space-evenly;
+         grid-column: 1 / 2;
+         background-color: $color-green;
+         color: $color-white;
+         //grid-gap: 0.2rem;
+         svg {
+            fill: $color-white;
+            height: 2rem;
+            width: 2rem;
+            margin-right: 1rem;
+         }
+   
+         &:hover {
+            background-color: $color-green-light;
+         }
+         &:active {
+            background-color: $color-green-dark;
+         }
+      }*/ }
+
+.form {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-row-gap: 1rem;
+  align-items: center;
+  justify-items: center; }
+  .form__userimg {
+    width: 50%;
+    grid-row: 1 / 2;
+    grid-column: 1 / -1;
+    z-index: 1;
+    border-radius: 2px;
+    box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.103); }
+  .form .form__upload {
+    width: 2rem;
+    height: 2rem;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1; }
+  .form .form__upload + label {
+    padding: 1rem 3.2rem;
+    font-size: 1.7rem;
+    text-transform: uppercase;
+    background-color: var(--color-primary-strong);
+    color: var(--color-white);
+    justify-items: end;
+    box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.103);
+    border-radius: 2px; }
+    .form .form__upload + label:hover {
+      background-color: #d6a5ae; }
+    .form .form__upload + label:active {
+      background-color: #9e747e; }
+  .form .form__update {
+    background-color: var(--color-primary-strong);
+    color: var(--color-white);
+    justify-items: end;
+    box-shadow: 0 0.4rem 0.8rem rgba(0, 0, 0, 0.103);
+    border-radius: 2px; }
+    .form .form__update:hover {
+      background-color: #d6a5ae; }
+    .form .form__update:active {
+      background-color: #9e747e; }
+  .form__nome {
+    color: black;
+    font-size: 2rem; }
+  .form__btn {
+    grid-column: 1 / -1;
+    grid-gap: 0.7rem;
+    background-color: #9e747e;
+    color: white; }
+    .form__btn svg {
+      fill: #9e747e;
+      height: 2rem;
+      width: 2rem;
+      margin-right: 1rem; }
+    .form__btn:hover {
+      background-color: #c6cac2; }
+    .form__btn:active {
+      background-color: #818380; }
