--- a/public/sass/parts/_login.scss
+++ b/public/sass/parts/_login.scss
@@ -34,6 +34,7 @@
    color: var(--color-white);
    justify-items: end;
    box-shadow: $shadow-2;
+   border-radius: 2px;
 
    &:hover {
       background-color: $color-primary-dark;
